--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ h1 {
     padding-left: 20px;
     padding-top: 20px;
 }
+#error {
+    font-size: 3em;
+    text-align: center;
+}
 article {
     margin-top: 10px;
     background-color: lightgray;
